--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:design:27.0.2'
-    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.ashokvarma.android:bottom-navigation-bar:1.2.0'
+    implementation 'jp.wasabeef:glide-transformations:2.0.1'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.5.0'
 }
